tests/errors/semantics/cannot_match_inferred_decl.odl
main :: () -> void  {
    swap :: (a: &!u, b: &u) -> void {
        tmp := *a;
        *a = *b;
        *b = tmp;
    };

    {
        a := 0;
        b := 0;

        swap(a, b);
    };
};